Update input field

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
         <div class="container">            
             <img src="android-chrome-192x192.png">
             <h1>Shopping list!</h1>
-            <input type="text" id="input-field" placeholder="Enter item here!">
+             <input type="text" id="input-field" placeholder="Enter item here!" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter item here!'">
             <button id="add-button">Add to cart</button>
             <ul id="shopping-list">
             </ul>
